simplifying workflows name; adding limit for required php version

--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "^8.0"
+        "php": "^8.0|8.3"
     },
     "require-dev": {
         "orchestra/testbench": "^6.41"
