--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -1,4 +1,4 @@
-name: Testing againt multiples Laravel & PHP versions
+name: Testing
 
 on:
   pull_request:
@@ -25,7 +25,7 @@ jobs:
             php: 8.1
             testbench: 8.*
 
-    name: php${{ matrix.php }} - laravel${{ matrix.laravel }}
+    name: php${{ matrix.php }} - laravel${{ matrix.laravel }} - ${{ matrix.dependency_version }}
     steps:
       - name: Checkout the Code
         uses: actions/checkout@v4
