--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -12,18 +12,13 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.0, 8.1]
-        laravel: [8.*, 9.*, 10.*]
+        laravel: [8.*, 9.*]
         dependency_version: [prefer-lowest, prefer-stable]
         include:
           - laravel: 8.*
-            php: 8.0
             testbench: 6.*
           - laravel: 9.*
-            php: 8.0
             testbench: 7.*
-          - laravel: 10.*
-            php: 8.1
-            testbench: 8.*
 
     name: php${{ matrix.php }} - laravel${{ matrix.laravel }} - ${{ matrix.dependency_version }}
     steps:
