--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -43,4 +43,4 @@ jobs:
           composer update --${{ matrix.dependency_version }} --prefer-dist --no-interaction
 
       - name: Running Tests
-        run: ./vendor/bin/phpunit ./tests --stop-on-defect
+        run: ./vendor/bin/phpunit ./tests
