--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -13,7 +13,7 @@ jobs:
       matrix:
         php: [8.0, 8.1]
         laravel: [8.*, 9.*]
-        dependency_version: [prefer-lowest, prefer-stable]
+        dependency_version: [prefer-stable]
         include:
           - laravel: 8.*
             testbench: 6.*
