--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -16,6 +16,9 @@ jobs:
         dependency_version: [prefer-lowest, prefer-stable]
         exclude:
           - laravel: 8.*
+            php: 8.0
+            dependency_version: prefer-lowest
+          - laravel: 8.*
             php: 8.1
             dependency_version: prefer-lowest
         include:
