--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.0, 8.1]
-        laravel: [8.*, 9.*]
+        laravel: [8.*, 9.*, 10.*]
         dependency_version: [prefer-lowest, prefer-stable]
         exclude:
           - laravel: 8.*
@@ -21,6 +21,8 @@ jobs:
           - laravel: 8.*
             php: 8.1
             dependency_version: prefer-lowest
+          - laravel: 10.*
+            php: 8.0
         include:
           - laravel: 8.*
             testbench: 6.*
