adding packages dependencies; adding pipe for lumen test; adding new php versions for testing

--- a/.github/workflows/lumen-tester.yaml
+++ b/.github/workflows/lumen-tester.yaml
@@ -12,28 +12,28 @@ jobs:
       fail-fast: true
       matrix:
         php: [8.0, 8.1, 8.2, 8.3]
-        laravel: [8.*, 9.*, 10.*]
+        lumen: [8.*, 9.*, 10.*]
         dependency_version: [prefer-lowest, prefer-stable]
         exclude:
-          - laravel: 8.*
+          - lumen: 8.*
             dependency_version: prefer-lowest
-          - laravel: 8.*
+          - lumen: 8.*
             php: 8.2
-          - laravel: 8.*
+          - lumen: 8.*
             php: 8.3
-          - laravel: 9.*
+          - lumen: 9.*
             php: 8.3
-          - laravel: 10.*
+          - lumen: 10.*
             php: 8.0
         include:
-          - laravel: 8.*
+          - lumen: 8.*
             testbench: 6.*
-          - laravel: 9.*
+          - lumen: 9.*
             testbench: 7.*
-          - laravel: 10.*
+          - lumen: 10.*
             testbench: 8.*
 
-    name: php${{ matrix.php }} - laravel${{ matrix.laravel }} - ${{ matrix.dependency_version }}
+    name: php${{ matrix.php }} - lumen{{ matrix.lumen }} - ${{ matrix.dependency_version }}
     steps:
       - name: Checkout the Code
         uses: actions/checkout@v4
@@ -42,7 +42,7 @@ jobs:
         uses: actions/cache@v4
         with:
           path: ~/.composer/cache/files
-          key: dependencies-laravel-${{ matrix.laravel }}-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
+          key: dependencies-lumen-${{ matrix.lumen }}-php-${{ matrix.php }}-composer-${{ hashFiles('composer.json') }}
 
       - name: Setup the PHP
         uses: shivammathur/setup-php@v2
@@ -52,7 +52,7 @@ jobs:
 
       - name: Install dependencies
         run: |
-          composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
+          composer require "laravel/lumen-framework:${{ matrix.lumen }}" "orchestra/testbench:${{ matrix.testbench }}" --no-interaction --no-update
           composer update --${{ matrix.dependency_version }} --prefer-dist --no-interaction
 
       - name: Running Tests
