skipping 'prefer-lower' from l9 and php 8.2; fixing lumen tests name; renaming workflow for framework

--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -1,4 +1,4 @@
-name: Testing
+name: Laravel Tests
 
 on:
   pull_request:
@@ -17,6 +17,9 @@ jobs:
         exclude:
           - laravel: 8.*
             dependency_version: prefer-lowest
+          - laravel: 9.*
+            dependency_version: prefer-lowest
+            php: 8.2
           - laravel: 8.*
             php: 8.2
           - laravel: 8.*
