--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0, 8.1, 8.2, 8.3]
-        laravel: [8.*, 9.*, 10.*]
+        php: [8.0, 8.1, 8.2, 8.3, 8.4]
+        laravel: [8.*, 9.*, 10.*, 11.*]
         dependency_version: [prefer-lowest, prefer-stable]
         exclude:
           - laravel: 8.*
@@ -21,13 +21,22 @@ jobs:
             dependency_version: prefer-lowest
             php: 8.2
           - laravel: 8.*
-            php: 8.2
-          - laravel: 8.*
-            php: 8.3
+            php:
+              - 8.2
+              - 8.3
+              - 8.4
           - laravel: 9.*
-            php: 8.3
+            php:
+              - 8.3
+              - 8.4
           - laravel: 10.*
-            php: 8.0
+            php:
+              - 8.0
+              - 8.4
+          - laravel: 11.*
+            php:
+              - 8.0
+              - 8.1
         include:
           - laravel: 8.*
             testbench: 6.*
@@ -35,6 +44,8 @@ jobs:
             testbench: 7.*
           - laravel: 10.*
             testbench: 8.*
+          - laravel: 11.*
+            testbench: 9.*
 
     name: php${{ matrix.php }} - laravel${{ matrix.laravel }} - ${{ matrix.dependency_version }}
     steps:
