--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -21,22 +21,13 @@ jobs:
             dependency_version: prefer-lowest
             php: 8.2
           - laravel: 8.*
-            php:
-              - 8.2
-              - 8.3
-              - 8.4
+            php: [8.2, 8.3, 8.4]
           - laravel: 9.*
-            php:
-              - 8.3
-              - 8.4
+            php: [8.3, 8.4]
           - laravel: 10.*
-            php:
-              - 8.0
-              - 8.4
+            php: [8.0, 8.4]
           - laravel: 11.*
-            php:
-              - 8.0
-              - 8.1
+            php: [8.0, 8.1]
         include:
           - laravel: 8.*
             testbench: 6.*
