--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -18,8 +18,11 @@ jobs:
           - laravel: 8.*
             dependency_version: prefer-lowest
           - laravel: 9.*
-            dependency_version: prefer-lowest
             php: 8.2
+            dependency_version: prefer-lowest
+          - laravel: 11.*
+            php: 8.3
+            dependency_version: prefer-lowest
           - laravel: 8.*
             php: 8.2
           - laravel: 8.*
