--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -23,6 +23,9 @@ jobs:
           - laravel: 11.*
             php: 8.3
             dependency_version: prefer-lowest
+          - laravel: 11.*
+            php: 8.2
+            dependency_version: prefer-lowest
           - laravel: 8.*
             php: 8.2
           - laravel: 8.*
