--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -11,8 +11,8 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        php: [8.0, 8.1, 8.2, 8.3, 8.4]
         laravel: [8.*, 9.*, 10.*, 11.*]
+        php: [8.0, 8.1, 8.2, 8.3, 8.4]
         dependency_version: [prefer-lowest, prefer-stable]
         exclude:
           - laravel: 8.*
@@ -50,7 +50,7 @@ jobs:
           - laravel: 11.*
             testbench: 9.*
 
-    name: php${{ matrix.php }} - laravel${{ matrix.laravel }} - ${{ matrix.dependency_version }}
+    name: laravel${{ matrix.laravel }} - php${{ matrix.php }} - ${{ matrix.dependency_version }}
     steps:
       - name: Checkout the Code
         uses: actions/checkout@v4
