--- a/.github/workflows/laravel-tester.yaml
+++ b/.github/workflows/laravel-tester.yaml
@@ -11,7 +11,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        laravel: [8.*, 9.*, 10.*, 11.*]
+        laravel: [8.*, 9.*, 10.*, 11.*, 12.*]
         php: [8.0, 8.1, 8.2, 8.3, 8.4]
         dependency_version: [prefer-lowest, prefer-stable]
         exclude:
@@ -40,6 +40,10 @@ jobs:
             php: 8.0
           - laravel: 11.*
             php: 8.1
+          - laravel: 12.*
+            php: 8.0
+          - laravel: 12.*
+            php: 8.1
         include:
           - laravel: 8.*
             testbench: 6.*
@@ -49,6 +53,8 @@ jobs:
             testbench: 8.*
           - laravel: 11.*
             testbench: 9.*
+          - laravel: 12.*
+            testbench: 10.*
 
     name: laravel${{ matrix.laravel }} - php${{ matrix.php }} - ${{ matrix.dependency_version }}
     steps:
